Fixed rsvp section, making it readable

--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ body {
   overflow-y: scroll;
 }
 
+.text {
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: 0.2px;
+  margin: auto;
+  font-family: Mandali, serif;
+}
+
 .language-switcher-button {
   width: 50px;
 }
@@ -114,9 +122,10 @@ header ul li {
 .headline-text {
   width: 100%;
   height: 100%;
-  background-image: url("assets/images/parallax/picture1-2.png");
-  background-position: top center;
-  background-size: contain;
+  background-image: url("assets/images/parallax/monogram-name.png");
+  background-position-x: center;
+  background-position-y: -2rem;
+  background-size: 300px;
   background-repeat: no-repeat;
   background-attachment: initial;
 }
@@ -287,6 +296,10 @@ a.register-button-big .register-button-icon {
   background-position: center;
   background-size: cover;
   background-attachment: initial;
+
+  .picture-container {
+    display: none;
+  }
 }
 
 a {
@@ -717,12 +730,55 @@ a.recommendation-button-big {
 }
 
 @media (max-width: 700px) {
-  #rsvp-section-text {
-    font-size: 34px;
-  }
-
   .timeline {
     width: 100%;
+  }
+
+  .rsvp-section {
+    display: flex;
+    background-color: #24354b;
+    flex-direction: column;
+  }
+
+  .rsvp-section .text-section {
+    width: 100%;
+    padding: 10px 3%;
+  }
+
+  #rsvp-section-text {
+    color: #fff;
+    font-family: Vollkorn, serif;
+    font-size: 30px;
+    margin: 10px;
+    text-align: center;
+  }
+
+  .rsvp-section .image-section {
+    width: 100%;
+    max-height: 100%;
+    left: 0%;
+    background-image: none;
+
+    .picture-container {
+      width: 100%;
+      display: flex;
+
+      .picture {
+        mask-image: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0) 0%,
+          rgba(0, 0, 0, 1) 50%,
+          rgba(0, 0, 0, 0) 100%
+        );
+        -webkit-mask-image: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0) 0%,
+          rgba(0, 0, 0, 1) 50%,
+          rgba(0, 0, 0, 0) 100%
+        );
+        width: 100%;
+      }
+    }
   }
 }
 
@@ -776,21 +832,6 @@ a.recommendation-button-big {
   header nav {
     padding: 0 1rem;
   }
-}
-
-@media (max-width: 420px) {
-  #rsvp-section-text {
-    font-size: 24px;
-  }
-
-  .rsvp-section .text-section {
-    padding: 10px 35px;
-    text-align: left;
-    position: absolute;
-    float: left;
-    width: 50%;
-    z-index: 10;
-  }
 
   .container.left::after,
   .container.right::after {
@@ -813,19 +854,11 @@ a.recommendation-button-big {
 }
 
 @media (max-width: 380px) {
-  .rsvp-section .image-section {
-    width: 100%;
-    left: 0%;
-    background-image: url("assets/images/parallax/picture3.jpg");
-    opacity: 35%;
-  }
-
   #rsvp-section-text {
-    font-size: 37px;
+    font-size: 20px;
   }
 
   .rsvp-section .text-section {
-    padding: 10px 35px;
     text-align: left;
     position: absolute;
     float: left;
@@ -861,7 +894,6 @@ a.recommendation-button-big {
 @media (orientation: portrait) {
   .headline-text-container {
     width: 100%;
-    top: 20%;
   }
 
   #map {
